<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">SD card unavailable</string>
    <string name="accessibility_review_ok">Done</string>
    <string name="accessibility_review_retake">Retake</string>
    <string name="action_settings">Settings</string>
    <string name="alwaysUse">Use this option as default</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto">Auto</string>
    <string name="auto_flash_on_hint">Flash</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera_disabled">Camera disabled due to security restrictions</string>
    <string name="cannot_connect_camera">The camera is occupied. Please try again later.</string>
    <string name="cannot_connect_camera_anyway">The camera is occupied. Please restart the phone and try again</string>
    <string name="cannot_connect_camera_v2">Error in camera. Please try again later or restart your phone.</string>
    <string name="cannot_load_image">Can\'t load image</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="crop_save">Save</string>
    <string name="date_time_set">Set</string>
    <string name="default_sans_serif">sans-serif</string>
    <string name="descp_accessibility_review_ok">Done</string>
    <string name="descp_accessibility_review_retake">Retake</string>
    <string name="descp_capture">Capture</string>
    <string name="descp_countdown_10s">10 seconds</string>
    <string name="descp_countdown_3s">3 seconds</string>
    <string name="descp_countdown_close">Close</string>
    <string name="descp_current_mode">Currently in %1s mode</string>
    <string name="descp_gif_play">Play</string>
    <string name="descp_mode">Mode</string>
    <string name="descp_mode_close">Exit mode selection</string>
    <string name="descp_record_cancel">Cancel record</string>
    <string name="descp_record_pause">Pause</string>
    <string name="descp_record_resume">Resume</string>
    <string name="descp_record_shutter">Take photo</string>
    <string name="descp_record_start">Start recording</string>
    <string name="descp_record_stop">Stop recording</string>
    <string name="descp_setting_back">Back</string>
    <string name="descp_smb_20m">20M</string>
    <string name="descp_smb_back">Switch to rear camera</string>
    <string name="descp_smb_filter">Filter</string>
    <string name="descp_smb_front">Switch to front camera</string>
    <string name="descp_smb_setting">Settings</string>
    <string name="descp_thumbnail">Thumbnail</string>
    <string name="dialog_ok">OK</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="file_selected_number">%1$s file(s) selected, %2$s MB in total</string>
    <string name="flyme_sans_serif_normal">sans-serif-normal</string>
    <string name="harm_url_desc_HARM_COCKHORSE">This website contains malware. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_DEFAULT_CHEAT">Attackers on this website might try to steal your identity and private information, causing privacy compromise, financial loss and other harms. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_GAMES_HANG">This website contains a game bot. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_MAKE_MONEY">This website contains deceptive information about making money online. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_MONEY_CHEAT">This website has been involved in prize scams or money transfer fraud. Attackers might trick you to provide verification codes and pay \"remittance charges\". Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_MSG_BLOG">This website is a suspicious blog. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_MSG_REACTIONARY">This website contains malicious information, politically incorrect opinions, and other improper content. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_MSG_SHADINESS">This website might redirect to a suspicious site. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_PRIVATE_SERVER">This website is on a private game server. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_REGULAR">Normal</string>
    <string name="harm_url_desc_HARM_SEX">This website contains pornographic content. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_SP_SERVICE">This website has been involved in malicious or deceptive value-added telecom service. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_STEAL_ACCOUNT">This website has been involved in phishing and account hacking. Attackers might steal your QQ, WeChat and other accounts. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_TIPS_CHEAT">This website has been involved in prize scams. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_TIPS_DEFAULT">This website contains links to another dangerous site. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_desc_HARM_UNKNOWN">This website might contain potentially risky content. Security suggests that you do NOT visit this site.</string>
    <string name="harm_url_type_EVIL_CHEAT1">Social engineering attack</string>
    <string name="harm_url_type_EVIL_CHEAT2">Fraud</string>
    <string name="harm_url_type_EVIL_FAULTSALES">Fake shopping website</string>
    <string name="harm_url_type_EVIL_ILLEGALCONTENT">Illegal content</string>
    <string name="mz_cam_mode_amazing">AmazingAR</string>
    <string name="mz_cam_mode_funny_snap">Funny Snap</string>
    <string name="mz_filter_1_key">YU1</string>
    <string name="mz_filter_1_title">Fresh</string>
    <string name="mz_filter_1_value">mz_yu1</string>
    <string name="mz_filter_2_key">YU2</string>
    <string name="mz_filter_2_title">Vivid</string>
    <string name="mz_filter_2_value">mz_yu2</string>
    <string name="mz_filter_3_key">YU3</string>
    <string name="mz_filter_3_title">Sunrise</string>
    <string name="mz_filter_3_value">mz_yu3</string>
    <string name="mz_filter_4_key">SI1</string>
    <string name="mz_filter_4_title">Fair</string>
    <string name="mz_filter_4_value">mz_si1</string>
    <string name="mz_filter_5_key">OB1</string>
    <string name="mz_filter_5_title">Nostalgia</string>
    <string name="mz_filter_5_value">mz_ob1</string>
    <string name="mz_filter_6_key">QU1</string>
    <string name="mz_filter_6_title">Quiet</string>
    <string name="mz_filter_6_value">mz_qu1</string>
    <string name="mz_filter_7_key">QU2</string>
    <string name="mz_filter_7_title">Azure</string>
    <string name="mz_filter_7_value">mz_qu2</string>
    <string name="mz_filter_8_key">SIL</string>
    <string name="mz_filter_8_title">Silver</string>
    <string name="mz_filter_8_value">mz_sil</string>
    <string name="mz_filter_9_key">BLA</string>
    <string name="mz_filter_9_title">B/W</string>
    <string name="mz_filter_9_value">mz_bla</string>
    <string name="mz_filter_none_key">NO</string>
    <string name="mz_filter_none_title">Original</string>
    <string name="mz_filter_none_value">mz_no</string>
    <string name="mz_setting_countdown_title">Countdown</string>
    <string name="mz_setting_eis_switch_title">Eis Switch</string>
    <string name="mz_setting_hdr_title">HDR</string>
    <string name="mz_setting_location_title">Location</string>
    <string name="mz_setting_manual_20m_title">Manual 20M</string>
    <string name="mz_setting_manual_48m_title">Manual 48M</string>
    <string name="mz_setting_manual_64m_title">Manual 64M</string>
    <string name="mz_setting_tripod_title">Tripod</string>
    <string name="mz_share_view_checkbox_text">Delete after sharing</string>
    <string name="mz_share_view_title">Share</string>
    <string name="pref_camera_flashmode_default">off</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camera_timelapse_default">0.5s</string>
    <string name="pref_camera_timelapse_title">TimeLapse mode</string>
    <string name="pref_camera_timer_default">0</string>
    <string name="pref_video_flashmode_default">off</string>
    <string name="setting_off_value">off</string>
    <string name="setting_on_value">on</string>
    <string name="setting_storage_value">sdcard</string>
</resources>