<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" app:title="@string/pref_camera_settings_category">
    <IconListPreference app:animationDrawables="@array/camera_flashmode_animation_drawable" app:defaultValue="@string/pref_camera_flashmode_default" app:entries="@array/pref_camera_flashmode_entries" app:entryValues="@array/pref_camera_flashmode_entryvalues" app:icons="@array/pref_camera_flashmode_icons" app:images="@array/camera_flashmode_images" app:key="pref_camera_flashmode_key_v1" app:largeIcons="@array/pref_camera_flashmode_icons_pressed" app:prefTitle="@string/pref_camera_flashmode_title"/>
    <IconListPreference app:animationDrawables="@array/camera_flashmode_torch_animation_drawable" app:defaultValue="@string/pref_camera_flashmode_default" app:entries="@array/pref_camera_flashmode_torch_entries" app:entryValues="@array/pref_camera_flashmode_torch_entryvalues" app:icons="@array/pref_camera_flashmode_torch_icons" app:images="@array/camera_flashmode_torch_images" app:key="pref_camera_flashmode_key_v2" app:largeIcons="@array/pref_camera_flashmode_icons_torch_pressed" app:prefTitle="@string/pref_camera_flashmode_title"/>
    <IconListPreference app:animationDrawables="@array/video_flashmode_animation_drawable" app:defaultValue="@string/pref_video_flashmode_default" app:entries="@array/pref_video_flashmode_entries" app:entryValues="@array/pref_video_flashmode_entryvalues" app:icons="@array/pref_video_flashmode_icons" app:images="@array/video_flashmode_images" app:key="pref_video_flashmode_key" app:largeIcons="@array/pref_video_flashmode_icons_pressed" app:prefTitle="@string/pref_camera_flashmode_title"/>
    <IconListPreference app:animationDrawables="@array/camera_timer_animation_drawables" app:defaultValue="@string/pref_camera_timer_default" app:descps="@array/mz_timer_descps" app:entries="@array/mz_timer_entries" app:entryValues="@array/mz_timer_entryvalues" app:icons="@array/camera_timer_icons" app:images="@array/camera_timer_images" app:key="pref_camera_timer_key" app:largeIcons="@array/camera_timer_icons_pressed" app:prefTitle="@string/mz_setting_countdown_title"/>
    <IconListPreference app:defaultValue="@string/setting_off_value" app:entries="@array/mz_hdr_entries" app:entryValues="@array/mz_hdr_entryvalues" app:icons="@array/camera_hdr_icons" app:images="@array/camera_hdr_images" app:key="mz_pref_hdr_key" app:largeIcons="@array/camera_hdr_icons_pressed" app:prefTitle="@string/mz_setting_hdr_title"/>
    <IconListPreference app:defaultValue="@string/setting_off_value" app:entries="@array/mz_fb_entries" app:entryValues="@array/mz_fb_entryvalues" app:icons="@array/camera_fb_icons" app:images="@array/camera_fb_images" app:key="mz_pref_fb_key" app:largeIcons="@array/camera_fb_icons_pressed"/>
    <IconListPreference app:defaultValue="@string/pref_camera_timelapse_default" app:entries="@array/camera_time_lapse_entries" app:entryValues="@array/camera_time_lapse_entryvalues" app:icons="@array/camera_time_lapse_icons" app:images="@array/camera_time_lapse_images" app:key="pref_camera_timelapse_key" app:largeIcons="@array/camera_time_lapse_icons_pressed" app:prefTitle="@string/pref_camera_timelapse_title"/>
    <IconListPreference app:defaultValue="@string/setting_off_value" app:entries="@array/mz_manual_20m_entries" app:entryValues="@array/mz_manual_20m_entryvalues" app:icons="@array/camera_manual_20m_icons" app:images="@array/camera_manual_20m_images" app:key="mz_pref_20m_key" app:largeIcons="@array/camera_manual_20m_icons_pressed" app:prefTitle="@string/mz_setting_manual_20m_title"/>
    <IconListPreference app:defaultValue="@string/setting_off_value" app:entries="@array/mz_manual_48m_entries" app:entryValues="@array/mz_manual_48m_entryvalues" app:icons="@array/camera_manual_48m_icons" app:images="@array/camera_manual_48m_images" app:key="mz_pref_48m_key" app:largeIcons="@array/camera_manual_48m_icons_pressed" app:prefTitle="@string/mz_setting_manual_48m_title"/>
    <IconListPreference app:defaultValue="@string/setting_off_value" app:entries="@array/mz_manual_64m_entries" app:entryValues="@array/mz_manual_64m_entryvalues" app:icons="@array/camera_manual_64m_icons" app:images="@array/camera_manual_64m_images" app:key="mz_pref_64m_key" app:largeIcons="@array/camera_manual_64m_icons_pressed" app:prefTitle="@string/mz_setting_manual_64m_title"/>
    <IconListPreference app:defaultValue="@string/setting_off_value" app:entries="@array/mz_tripod_entries" app:entryValues="@array/mz_tripod_entryvalues" app:icons="@array/camera_tripod_icons" app:images="@array/camera_tripod_images" app:key="mz_pref_tripod_key" app:largeIcons="@array/camera_tripod_icons_pressed" app:prefTitle="@string/mz_setting_tripod_title"/>
    <IconListPreference app:defaultValue="@string/setting_on_value" app:entries="@array/mz_eis_switch_entries" app:entryValues="@array/mz_eis_switch_entryvalues" app:icons="@array/camera_eis_switch_icons" app:images="@array/camera_eis_switch_images" app:key="mz_pref_eis_switch_key" app:largeIcons="@array/camera_eis_switch_icons_pressed" app:prefTitle="@string/mz_setting_eis_switch_title"/>
</PreferenceGroup>
