<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" app:title="@string/pref_camera_settings_category">
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_meter_separate_key"/>
    <ListPreference app:defaultValue="@string/setting_on_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="pref_camera_recordlocation_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_watch_capture_action_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_meshline_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_level_key"/>
    <ListPreference app:defaultValue="@string/setting_storage_value" app:entryValues="@array/mz_storage_entryvalues" app:key="mz_pref_storage_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_time_mark_key"/>
    <ListPreference app:defaultValue="@string/setting_on_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_device_mark_key"/>
    <ListPreference app:defaultValue="@string/setting_on_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_meizu_mark_key"/>
    <ListPreference app:defaultValue="@string/setting_on_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_funny_hd_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_voice_action_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_mfll_key"/>
    <ListPreference app:defaultValue="@string/setting_on_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_mirror"/>
    <ListPreference app:key="pref_camera_picturesize_key"/>
    <ListPreference app:key="pref_camera_videosize_key"/>
    <ListPreference app:key="pref_camera_picturesize_image_capture_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_fb_high_picturesize_key"/>
    <ListPreference app:defaultValue="@string/setting_on_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_asd_enable_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_barcode_in_auto_enable_key"/>
    <ListPreference app:defaultValue="@string/setting_off_value" app:entryValues="@array/mz_on_off_entryvalues" app:key="mz_pref_wide_angle_undistort_enable_key"/>
</PreferenceGroup>
