<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="bottom|center_vertical|center_horizontal|center" android:orientation="vertical" android:id="@+id/share_view_container" android:paddingTop="@dimen/intent_chooser_view_padding_top" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/share_view_header" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:gravity="center" android:id="@+id/share_view_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mz_share_view_title" android:singleLine="true" android:includeFontPadding="false" android:fontFamily="sans-serif-medium"/>
        <TextView android:textSize="12sp" android:gravity="center" android:id="@+id/share_view_summary" android:layout_width="wrap_content" android:layout_height="16dp" android:text="@string/file_selected_number" android:singleLine="true" android:includeFontPadding="false"/>
        <CheckBox android:textSize="16sp" android:textColor="@color/colorBlack" android:gravity="center" android:id="@+id/share_view_checkbox" android:layout_width="wrap_content" android:layout_height="24dp" android:text="@string/mz_share_view_checkbox_text" android:singleLine="true" android:includeFontPadding="false" android:fontFamily="sans-serif-medium" android:paddingStart="9dp" style="@style/Widget.Flyme.ShareView.CheckBox"/>
    </LinearLayout>
    <flyme.support.v4.view.ViewPager android:id="@+id/share_view_pager" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <com.meizu.sharewidget.widget.PageIndicator android:gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/share_view_indicator" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="17dp"/>
</LinearLayout>
