<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/mz_camera_controlbar" android:tag="layout/mz_camera_controlbar_0" style="@style/MzControlBar">
    <com.meizu.media.camera.views.RotateImageView android:id="@+id/switch_camera_btn" android:background="@drawable/mz_imageview_selector" android:clickable="true" android:layout_width="@dimen/mz_mode_width" android:layout_height="@dimen/mz_mode_height" android:layout_marginLeft="@dimen/mz_controlbar_marginLeft" android:src="@drawable/mz_btn_switch" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:contentDescription="@string/descp_smb_front"/>
    <com.meizu.media.camera.views.RotateImageView android:id="@+id/mode_exit_btn" android:background="@drawable/mz_imageview_selector" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/mz_mode_width" android:layout_height="@dimen/mz_mode_height" android:layout_marginLeft="@dimen/mz_controlbar_marginLeft" android:src="@drawable/mz_ic_tab_mode_exit" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:contentDescription="@string/descp_smb_front"/>
    <com.meizu.media.camera.views.RotateImageView android:id="@+id/record_pause_btn" android:background="@drawable/mz_imageview_selector" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mz_controlbar_marginLeft" android:src="@drawable/mz_btn_record_pause_default" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:contentDescription="@string/descp_record_pause"/>
    <com.meizu.media.camera.views.ShutterLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:layout_gravity="center" android:id="@+id/shutter_bg" android:layout_width="@dimen/mz_shutter_button_width" android:layout_height="@dimen/mz_shutter_button_width" android:src="@drawable/mz_btn_shutter_bg" android:scaleType="center"/>
        <ImageView android:layout_gravity="center" android:id="@+id/mode_menu_shutter_btn" android:visibility="gone" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mode_menu_shutter"/>
        <com.meizu.media.camera.views.ShutterButton android:layout_gravity="center" android:id="@+id/shutter_button" android:focusable="true" android:clickable="true" android:layout_width="@dimen/mz_shutter_button_width" android:layout_height="@dimen/mz_shutter_button_height" android:src="@drawable/mz_btn_shutter_default" android:scaleType="center" android:contentDescription="@string/descp_capture"/>
        <com.meizu.common.widget.LoadingView android:layout_gravity="center" android:id="@+id/shutter_capture_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:mcLBackground="@android:color/transparent" app:mcLForeground="@android:color/white" app:mcLoadingRadius="19.67dp" app:mcRingWidth="4dp"/>
        <com.meizu.media.camera.views.RotateImageView android:layout_gravity="center" android:id="@+id/record_start_btn" android:visibility="invisible" android:clickable="true" android:layout_width="@dimen/mz_shutter_button_width" android:layout_height="@dimen/mz_shutter_button_height" android:src="@drawable/mz_imageview_selector" android:scaleType="center" android:contentDescription="@string/descp_record_start"/>
    </com.meizu.media.camera.views.ShutterLayout>
    <ImageView android:id="@+id/thumbnail_bg" android:visibility="invisible" android:clickable="false" android:layout_width="@dimen/mz_thumbnail_bg_width" android:layout_height="@dimen/mz_thumbnail_bg_height" android:layout_marginRight="@dimen/mz_thumbnail_bg_marginRight" android:src="@drawable/mz_thumbnail_ring_bg" android:layout_alignParentRight="true" android:layout_centerInParent="true"/>
    <com.meizu.media.camera.views.ThunbnailRotateImageView android:id="@+id/thumbnail_btn" android:clickable="true" android:layout_width="@dimen/mz_mode_width" android:layout_height="@dimen/mz_mode_height" android:layout_marginRight="@dimen/mz_controlbar_marginRight" android:scaleType="fitXY" android:layout_alignParentRight="true" android:layout_centerInParent="true" android:contentDescription="@string/descp_thumbnail"/>
    <com.meizu.common.widget.LoadingView android:id="@+id/capture_loading" android:visibility="gone" android:layout_width="@dimen/mz_mode_width" android:layout_height="@dimen/mz_mode_height" android:layout_marginRight="@dimen/mz_controlbar_marginRight" android:layout_alignParentRight="true" android:layout_centerInParent="true" app:mcLBackground="@android:color/transparent" app:mcLForeground="@android:color/white" app:mcLoadingRadius="@dimen/mz_shutter_loading_radius" app:mcRingWidth="@dimen/mz_shutter_loading_thick"/>
    <com.meizu.media.camera.views.RotateImageView android:id="@+id/record_shutter_btn" android:background="@drawable/mz_imageview_selector" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mz_controlbar_marginRight" android:src="@drawable/mz_btn_record_shutter_default" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:contentDescription="@string/descp_record_shutter"/>
    <com.meizu.media.camera.views.RotateImageView android:id="@+id/switch_record_btn" android:background="@drawable/mz_imageview_selector" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mz_controlbar_marginRight" android:src="@drawable/mz_btn_switch_record" android:layout_alignParentLeft="true" android:layout_centerInParent="true" android:contentDescription="@string/descp_record_shutter"/>
</RelativeLayout>
